--- a/Pet project/Views/_ViewImports.cshtml
+++ b/Pet project/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using Pet_project
 @namespace Pet_project.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper "*, Microsoft.AspNetCore.SpaServices"
