--- a/Pet project/ClientApp/src/style/components/_Header.scss
+++ b/Pet project/ClientApp/src/style/components/_Header.scss
@@ -6,7 +6,7 @@
     .info-list__item {
         border: 0;
         cursor: pointer;
-        text-align: center;
+        text-align: left;
     }
 
     .info-list__item:hover {
@@ -16,4 +16,13 @@
 
 .info-btn {
     width: 10%;
+}
+
+.catalog-btn {
+    width: 10%;
+}
+
+.basket-img {
+    width: 30px;
+    height: 30px;
 }
